--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">notificacoes</string>
     <string name="valor1">EXIBIR NOTIFICAÇÃO</string>
-    <string name="valor2">Tela 2</string>
+    <string name="valor2">NOTIFICAÇÃO</string>
+    <string name="valor3">Tela 2</string>
 </resources>
